--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap-validation": "^0.1.11",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.8.4",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
